# cookiecutter-python-package

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: HISTORY.md  README.md  environment.yml  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
