[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
authors = [
    {name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = '{{ cookiecutter.email }}'},
    ]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["physical oceanography"]
classifiers = [
    "Development Status :: 3 - Alpha",
{% if cookiecutter.open_source_license == 'MIT license' -%}
    "License :: OSI Approved :: MIT License",
{% elif cookiecutter.open_source_license == 'BSD license' %}
    "License :: OSI Approved :: BSD License",
{% elif cookiecutter.open_source_license == 'ISC license' -%}
    "License :: OSI Approved :: ISC License (ISCL)",
{% elif cookiecutter.open_source_license == 'Apache Software License 2.0' -%}
    "License :: OSI Approved :: Apache Software License",
{% elif cookiecutter.open_source_license == 'GNU General Public License v3' -%}
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
{% endif %}
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Oceanography",
    ]
requires-python = ">= 3.8"
dependencies = []

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}.git"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/main/HISTORY.md"

[tool.pytest.ini_options]
# in general, do not place a `__init__.py` in your tests
# options are explained here:
# https://learn.scientific-python.org/development/guides/pytest/
# minversion = "6.0"
# addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
# xfail_strict = true
# filterwarnings = ["error"]
# log_cli_level = "info"
testpaths = ["src/{{ cookiecutter.project_slug }}/tests"]
